# whereami-wigle-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  PRD.md  README.md  flake.nix  shell.nix
backlog/: config.yml
backlog/tasks/: task-0019 - Fix-Apple-protobuf-length-truncation.md  task-0020 - Add-HTTP-timeouts-to-all-clients.md  task-0021 - Deduplicate-resolve_background-spawns.md  task-0022 - Fix-rate-limit-race-condition.md  task-0023 - Extract-Provider-trait-to-eliminate-cascade-duplication.md  task-0024 - Fix-handle_debug-On-m-pending-scan.md  task-0025 - Nominatim-should-not-block-locate-response.md  task-0026 - Add-source-priority-to-upsert_ap.md  task-0027 - Delete-dead-resolve_for_locate-and-dead-code-annotations.md  task-0028 - CLI-should-use-typed-response-structs.md  task-0029 - Update-PRD-to-reflect-Apple-WPS-backend.md  task-0030 - schema_version-table-should-prevent-multiple-rows.md  task-0031 - Add-location-history-timeseries-DB.md  task-0032 - Fix-antimeridian-polar-trilateration-bug.md  task-0033 - Add-Wi-Fi-6E-6-GHz-channel-mapping.md  task-0039 - Graceful-shutdown-on-SIGTERM.md  (+69 more)
docs/: architecture.drawio  protocol.md
nix/: exec-start.nix  hm-module.nix  module.nix  options.nix  package.nix
whereami-client/: Cargo.toml  README.md  build.rs
whereami-client/src/: lib.rs  main.rs
whereamid/: .gitignore  Cargo.toml  build.rs
whereamid/fuzz/: Cargo.toml
whereamid/fuzz/fuzz_targets/: fuzz_apple_decode.rs  fuzz_apple_encode.rs  fuzz_iw_parser.rs  fuzz_nmcli_parser.rs  fuzz_trilaterate.rs
whereamid/src/: apple.rs  beacondb.rs  config.rs  db.rs  debounce.rs  geo.rs  history.rs  http.rs  lib.rs  main.rs  nominatim.rs  pending.rs  provider.rs  resolver.rs  scanner.rs  server.rs  trilaterate.rs  wigle.rs
whereamid/src/db/: source.rs
whereamid/src/server/: address_cache.rs
whereamid/tests/: proptests.proptest-regressions  proptests.rs
(+16 files in other folders)
