[package]
name = "whereami-client"
version = "0.6.0"
edition = "2021"
readme = "README.md"
description = "Typed Rust client for the whereamid Wi-Fi geolocation daemon."
license = "MIT"

[[bin]]
name = "whereami"
path = "src/main.rs"

[lib]
name = "whereami_client"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
